# lolinfos

./: pyproject.toml
lolinfos/: clean.py  collect.py  main.py  settings.py
tests/: conftest.py  test_clear_champion.py  test_cli.py  test_collect_data.py  test_env_variables.py
